merubah typo sepeda

--- a/portofolio.html
+++ b/portofolio.html
@@ -25,6 +25,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
 
   <!-- =======================================================
   * Template Name: iPortfolio - v3.5.0
@@ -144,7 +145,7 @@
         <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
           <div class="count-box">
             <img src="assets/img/sepeda.png" width="180">
-            <p><strong>Bersepedah</strong></p>
+            <p><strong>Bersepeda</strong></p>
           </div>
         </div>
 
